# healthy_habits_tracker

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  serializers.py  services.py  tasks.py  tests.py  validators.py  views.py
users/: models.py  urls.py  views.py
users/management/commands/: create_users.py  csu.py
